# budgettracker

./: CNAME  app.js  index.html  package.json  server.js  style.css
backend/: CMakeLists.txt  Dockerfile  migrations.sql
backend/src/: AppComponent.hpp  Db.cpp  Db.hpp  Env.cpp  Env.hpp  Jwt.cpp  Jwt.hpp  Password.cpp  Password.hpp  ci.yml  main.cpp
backend/src/Utils/: AppErrors.hpp  JwtUtil.cpp  Money.hpp  TimeUtil.hpp
backend/src/api/: IssueController.hpp  ProjectController.hpp
backend/src/controllers/: AuthController.cpp  AuthController.hpp  CategoryController.hpp  SummaryController.hpp  TransactionController.cpp  TransactionController.hpp
backend/src/db/: Database.hpp  MigrationRunner.hpp
backend/src/dto/: ErrorDto.hpp  ProjectDto.hpp
backend/src/middleware/: AuthMiddleware.cpp  AuthMiddleware.hpp  ErrorHandler.cpp  Models.hpp
backend/src/models/: Category.hpp  Transaction.cpp  Transaction.hpp
backend/src/repositories/: IUserRepository.hpp  IssueRepository.cpp  IssueRepository.hpp  ProjectRepository.cpp  SqliteIssueRepository.hpp  TransactionRepository.hpp
backend/src/repositories/sqlite/: SQLiteCategoryRepository.cpp  SQLiteCategoryRepository.hpp  SQLiteUserRepository.cpp  SqliteIssueTransactionRepository.hpp  SqliteTransactionRepository.cpp  SqliteTransactionRepository.hpp
backend/src/services/: AuthService.hpp  FinanceService.cpp  FinanceService.hpp  IssueService.hpp  ProjectService.hpp  TransactionService.hpp
src/: AppComponent.hpp  JwtUtil.hpp  PasswordHasher.cpp  main.cpp
src/Frontend/: index.html
src/Utils/: PasswordHasher.hpp
src/api/: FinanceRoutes.hpp
src/config/: Env.hpp
src/controllers/: HealthController.hpp
src/db/: Database.cpp  Database.hpp  migrations.sql
(+33 files in other folders)
